--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-before improvement
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MENTA課題③</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <h1>ToDoリスト</h1>
+  <div id="radioButtons">
+    <input type="radio">すべて
+    <input type="radio">作業中
+    <input type="radio">完了
+  </div>
+
+
+  <div id="tasks">
+    <table id="table">
+      <tr id="th">
+        <th>ID</th>
+        <th>コメント</th>
+        <th>状態</th>
+      </tr>
+    </table>
+  </div>
+
+  <h2>新規タスクの追加</h2>
+
+  <div id="addTasks">
+    <input id="addTask" type="text">
+    <input id="addSubmit" type="submit" value="追加">
+  </div>
+  
+  <script src="main.js">
+  </script>
+</body>
+</html>
